# churchroad-private

./: Cargo.toml
egglog_src/: churchroad.egg
src/: global_greedy_dag.rs  lib.rs  main.rs  util.rs
tests/: egglog_tests.rs  interpreter_tests.rs
tests/integration_tests/: mul_32_32_64.v
yosys-plugin/: churchroad.cc
