[package]
name = "churchroad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egglog = { git = "https://github.com/egraphs-good/egglog", rev = "215714e1cbb13ae9e21bed2f2e1bf95804571512" }
log = "0.4.20"
egraph-serialize = "0.2"
rand = "0.8.4"
indexmap = "2.0.0"
clap = "4.5.8"
tempfile = "3.10.1"
env_logger = "0.11.5"
rpds = "1.1.0"
ordered-float = "3"
